bug modal window visible

--- a/src/components/home/title/modal/Modal.module.scss
+++ b/src/components/home/title/modal/Modal.module.scss
@@ -15,6 +15,14 @@
         width: 300px;
         height: 300px;
         background-color: red;
+
+        .form{
+            
+        }
     }
 
+}
+
+.unModal{
+    display: none;
 }
